# Rudra

./: README.md  action.yml  main.py  pyproject.toml  test.py
.github/workflows/: rudra.yml
rudra/: __init__.py  config.py  diff.py  engine.py  github_client.py  models.py  report.py  scoring.py
rudra/detectors/: __init__.py  base.py  python_ast.py  rules_yaml.py  secrets.py
rudra/llm/: __init__.py  client.py  prompts.py  triage.py  verifier.py
rudra/rules/: llm.yaml
