[project]
name = "rudra"
version = "0.1.0"
description = "Open-source GenAI/LLM security reviewer for pull requests (OWASP LLM Top 10)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
rudra = "rudra.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rudra", "rudra.detectors", "rudra.llm"]

[tool.setuptools.package-data]
"rudra" = ["rules/*.yaml"]
